--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "types-for-adobe",
-  "version": "3.0.0",
+  "version": "3.0.0-alpha.1",
   "files": [
     "AfterEffects",
     "Animate",
